[package]
name = "lachesis"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "lachesis"
path = "src/main.rs"

[dependencies]
nix = { version = "0.30.1", features = ["mman", "signal"] }
rand = "0.9.2"
thiserror = "2.0.17"

[build-dependencies]
ar = "0.9.0"
cc = "1.2.41"

[profile.release]
opt-level = 0
